Revert "Remove the partially-baked iron-query-params for now"
This reverts commit 3652c1712d754fccd764b3b990165793ad5d1a98.

--- a/test/index.html
+++ b/test/index.html
@@ -18,6 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script>
       WCT.loadSuites([
         'iron-page-url.html',
+        'iron-query-params.html',
         'initialization-tests.html'
       ]);
     </script>
